// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ApplicationError > should render with error message and reload 1`] = `
<DocumentFragment>
  <main
    class="light"
    data-testid="Main"
  >
    <div
      class="relative flex flex-col sm:min-h-screen pb-14 sm:pb-0"
      style="min-height: -webkit-fill-available;"
    >
      <nav
        aria-labelledby="main menu"
        class="custom-nav-wrapper dark:bg-theme-dark-900 dim:bg-theme-dim-900 sticky inset-x-0 top-0 z-40 bg-white transition-all duration-200 h-21"
      >
        <div
          class="relative flex"
        >
          <div
            class="mt-6 flex flex-1 px-6 md:px-10"
          >
            <div
              class="my-auto flex h-12 items-center"
            >
              <button
                class="bg-theme-primary-600 focus:ring-theme-primary-400 dark:bg-theme-dark-navy-500 my-auto flex cursor-pointer items-center justify-center text-white outline-hidden focus:ring-2 focus:outline-hidden h-11 w-11 rounded-xl"
                data-testid="NavigationBarLogo--button"
                type="button"
              >
                <span
                  class="relative"
                >
                  <svg
                    fill="none"
                    height="32"
                    viewBox="0 0 363 363"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      clip-path="url(#clip0_434_4442)"
                    >
                      <path
                        d="M174.182 352.325a279.256 279.256 0 0 1-25.627-20.536c-8.518-7.525-17.006-15.66-25.229-24.178a470.15 470.15 0 0 1-29.234-33.315 449.417 449.417 0 0 1-57.68-93.623 420.933 420.933 0 0 1-22.044-60.102A416.702 416.702 0 0 1 1.126 51.749c-.512-4.803-.303-10.73 5.9-13.842a393.077 393.077 0 0 1 54.42-19.94 459.697 459.697 0 0 1 52.646-12.195A374.409 374.409 0 0 1 176.15.333h11.6a374.406 374.406 0 0 1 62.057 5.44 459.723 459.723 0 0 1 52.646 12.195 393.328 393.328 0 0 1 54.422 19.939c6.203 3.115 6.41 9.034 5.898 13.842a416.672 416.672 0 0 1-13.242 68.822 421.133 421.133 0 0 1-22.044 60.102 449.395 449.395 0 0 1-57.68 93.623 470 470 0 0 1-29.234 33.315c-8.223 8.518-16.711 16.653-25.229 24.178a279.73 279.73 0 0 1-25.627 20.536 17.811 17.811 0 0 1-15.528 0h-.007zm6.769-230.087c-.412.547-28.363 29.571-48.772 50.764-7.035 7.318-13.229 13.736-17.187 17.853a49.345 49.345 0 0 0-14.37 29.355 42.981 42.981 0 0 0 2.034 17.531 59.295 59.295 0 0 0 10.41 18.547 369.34 369.34 0 0 0 42.811 44.915 223.324 223.324 0 0 0 20.072 16.051 13.364 13.364 0 0 0 12.005 0 223.333 223.333 0 0 0 20.07-16.051 369.191 369.191 0 0 0 42.811-44.915 59.297 59.297 0 0 0 10.411-18.547 42.98 42.98 0 0 0 2.033-17.531 49.34 49.34 0 0 0-14.377-29.358l-14.811-15.385-1.779-1.848c-20.66-21.451-48.955-50.832-49.371-51.383a1.179 1.179 0 0 0-.995-.548 1.184 1.184 0 0 0-.995.548v.002zm1.408-69.483c.136.215.321.505.582.869.391.544 6.257 9.93 14.382 22.92 19.488 31.162 52.102 83.315 60.679 96.014 6.342 9.377 14.353 14.77 21.974 14.772 7.402 0 18.108-5.031 27.079-29.067a332.382 332.382 0 0 0 19.124-81.095c.409-3.84.243-8.568-4.713-11.056a314.32 314.32 0 0 0-43.468-15.926 367.237 367.237 0 0 0-42.052-9.743 299.13 299.13 0 0 0-49.568-4.345h-8.871a299.13 299.13 0 0 0-49.568 4.345 367.225 367.225 0 0 0-42.051 9.743 314.427 314.427 0 0 0-43.469 15.926c-4.951 2.486-5.12 7.213-4.712 11.056a332.313 332.313 0 0 0 19.124 81.095c4.952 13.265 13.67 29.067 27.078 29.067 7.624 0 15.63-5.384 21.974-14.772 8.57-12.687 41.169-64.811 60.643-95.955l.032-.053c8.124-12.993 13.995-22.38 14.384-22.921.259-.364.455-.657.58-.87.209-.327.311-.491.416-.491.105 0 .214.16.421.487zm-55.455 149.533l19.652-20.614h69.159l19.649 20.614h-108.46zm34.197-35.377l20.162-20.871 20.159 20.871h-40.321z"
                        fill="currentColor"
                      />
                    </g>
                  </svg>
                </span>
              </button>
              <span
                class="ml-4 text-lg leading-[21px] uppercase"
              >
                <strong>
                  ARK
                </strong>
                Vault
              </span>
            </div>
          </div>
        </div>
      </nav>
      <div
        class="flex flex-1 flex-col"
      >
        <div
          class="w-full py-4 first:pt-8 last:pb-8 flex flex-1 flex-col justify-center text-center"
        >
          <div
            class="mx-auto px-6 md:px-10 lg:container"
          >
            <div
              class="mx-auto flex w-full max-w-xs justify-center"
            >
              <svg
                fill="none"
                viewBox="0 0 342 272"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  clip-path="url(#clip0_675_23634)"
                >
                  <path
                    d="M152 126.163V115.345C152 115.345 150.408 107.493 143.844 107.29C137.28 107.087 114.814 107.29 114.814 107.29C114.814 107.29 116.256 109.882 116.241 111.253C116.226 112.624 116.241 126.163 116.241 126.163H152Z"
                    fill="#EEF3F5"
                  />
                  <path
                    d="M255.466 223.224H278.16C278.16 223.224 278.388 217.058 276.917 215.212C275.446 213.366 273.146 209.862 271.589 209.747C269.82 209.393 268.092 208.86 266.431 208.157H264.076V166.884C264.076 166.884 260.396 173.984 255.197 176.251C252.006 177.619 248.569 178.322 245.097 178.317C245.097 178.317 245.609 187.794 244.287 191.117C242.446 195.339 240.371 199.455 238.071 203.445C237.228 204.693 237.458 205.289 239.397 205.328C242.543 205.469 245.612 206.347 248.356 207.892C251.29 209.714 255.1 212.855 255.464 216.255C255.828 219.655 256.234 220.288 256.184 220.798C255.993 221.62 255.753 222.43 255.466 223.224V223.224Z"
                    fill="#DBDEE5"
                  />
                  <path
                    d="M264.246 85.2819C264.246 85.2819 263.546 74.723 266.54 70.802C269.534 66.881 278.418 56.6669 279.032 51.2399C279.646 45.8129 280.932 39.2669 279.032 36.5859C277.132 33.9049 273.498 34.4359 272.594 34.5719C271.69 34.7079 275.804 43.4719 268.976 53.2869C262.148 63.1019 250.738 68.287 249.722 68.75C248.706 69.213 246.559 70.4139 249.722 71.3139C252.885 72.2139 258.302 76.0209 260.084 79.0209C261.866 82.0209 264.246 85.2819 264.246 85.2819V85.2819Z"
                    fill="#DBDEE5"
                  />
                  <path
                    d="M64 271.163V251.163H26V261.163H24V251.163H0V249.163H24V211.163H0V209.163H24V191.163H26V209.163H29V211.163H26V249.163H64V231.163H66V249.163H89V251.163H66V271.163H64ZM103 255.163V251.163H99V249.163H103V245.163H105V249.163H109V251.163H105V255.163H103ZM314 242.163V223.163H227V242.163H225V223.163H220V221.163H225V182.163H227V221.163H314V182.163H310V180.163H314V142.163H310V140.163H314V117.163H316V140.163H322V142.163H316V180.163H342V182.163H316V221.163H342V223.163H316V242.163H314ZM295 186.163V182.163H291V180.163H295V176.163H297V180.163H301V182.163H297V186.163H295ZM24 185.163V181.163H20V179.163H24V175.163H26V179.163H30V181.163H26V185.163H24ZM314 107.163V103.163H310V101.163H314V97.163H316V101.163H320V103.163H316V107.163H314Z"
                    fill="#DBDEE5"
                  />
                  <path
                    d="M201.294 223.255H91.8418"
                    stroke="#DBDEE5"
                    stroke-linecap="round"
                    stroke-width="2"
                  />
                  <path
                    d="M279.32 38.542C278.483 41.142 275.089 37.413 275.149 34.995C275.209 32.577 280.157 35.936 279.32 38.542Z"
                    fill="#235B95"
                  />
                  <path
                    d="M162 125.163C176.291 105.62 203 88.563 203 56.163C203 23.763 215.474 18.424 222 15.163C223.433 14.447 227.45 5.12 228 3.163C228.55 1.206 231.566 -0.499002 234 3.163C236.178 6.44 239 11.163 239 11.163C239 11.163 263.327 11.194 272 34.163C272.4 35.212 276.644 34.022 278 35.163C279.356 36.304 284.216 50.422 271 65.163C267.826 68.704 264 71.463 264 87.163V208.163C264 208.163 278 207.894 278 221.163V222.163H262"
                    stroke="#212225"
                    stroke-linecap="round"
                    stroke-width="2"
                  />
                  <path
                    d="M226.242 146.595C232.1 150.712 236.868 156.192 240.136 162.563C243.404 168.934 245.073 176.004 244.999 183.163C244.999 192.157 241.658 197.926 237.112 204.956"
                    stroke="#212225"
                    stroke-linecap="round"
                    stroke-width="2"
                  />
                  <path
                    d="M237 205.163C243.706 205.163 254.2 207.455 256 219.163C256.091 220.161 256.091 221.165 256 222.163L228.025 222.255"
                    stroke="#212225"
                    stroke-linecap="round"
                    stroke-width="2"
                  />
                  <path
                    d="M272.114 34.397C272.114 34.397 280.44 58.944 241 72.163"
                    stroke="#212225"
                    stroke-linecap="round"
                    stroke-width="2"
                  />
                  <path
                    d="M220.9 15.876C220.9 15.876 226.456 14.463 229 12.163"
                    stroke="#212225"
                    stroke-linecap="round"
                    stroke-width="2"
                  />
                  <path
                    d="M264 85.163C264 85.163 258.986 73.163 247 70.163"
                    stroke="#212225"
                    stroke-linecap="round"
                    stroke-width="2"
                  />
                  <path
                    d="M208.636 125.985C205.931 122.056 203.949 114.174 205.999 108.163"
                    stroke="#212225"
                    stroke-linecap="round"
                    stroke-width="2"
                  />
                  <path
                    d="M260.89 31.563C260.89 31.563 258.29 29.363 252.832 31.563"
                    stroke="#212225"
                    stroke-linecap="round"
                    stroke-width="2"
                  />
                  <path
                    d="M245 178.591C245 178.591 260.492 178.128 264 165.501"
                    stroke="#212225"
                    stroke-linecap="round"
                    stroke-width="2"
                  />
                  <path
                    d="M116 126.163H216C218.652 126.163 221.196 127.217 223.071 129.092C224.946 130.967 226 133.511 226 136.163V213.163"
                    stroke="#DBDEE5"
                    stroke-width="2"
                  />
                  <path
                    d="M59 127.163V111.163C59 108.511 60.0536 105.967 61.929 104.092C63.8043 102.217 66.3478 101.163 69 101.163H106C108.652 101.163 111.196 102.217 113.071 104.092C114.946 105.967 116 108.511 116 111.163V127.163"
                    stroke="#DBDEE5"
                    stroke-width="2"
                  />
                  <path
                    d="M115 107.163H142C144.652 107.163 147.196 108.217 149.071 110.092C150.946 111.967 152 114.511 152 117.163V127.163"
                    stroke="#DBDEE5"
                    stroke-width="2"
                  />
                  <path
                    d="M116 126.163H216C218.652 126.163 221.196 127.217 223.071 129.092C224.946 130.967 226 133.511 226 136.163V162.163M59 213.163V127.163"
                    stroke="#DBDEE5"
                    stroke-linecap="round"
                    stroke-width="2"
                  />
                  <path
                    d="M178 171.163H174V167.163H178V171.163ZM170 171.163H166V167.163H170V171.163ZM122 171.163H118V167.163H122V171.163ZM114 171.163H110V167.163H114V171.163ZM174 167.163H170V163.163H174V167.163ZM118 167.163H114V163.163H118V167.163ZM178 163.163H174V159.163H178V163.163ZM170 163.163H166V159.163H170V163.163ZM122 163.163H118V159.163H122V163.163ZM114 163.163H110V159.163H114V163.163Z"
                    fill="#212225"
                  />
                  <path
                    d="M133 190.163H157"
                    stroke="#212225"
                    stroke-width="2"
                  />
                  <path
                    d="M75.617 206.163H108.5C110.754 206.163 112.916 207.058 114.51 208.653C116.104 210.247 117 212.409 117 214.663C117 216.917 116.104 219.079 114.51 220.673C112.916 222.267 110.754 223.163 108.5 223.163H55.5C53.2457 223.163 51.0836 222.267 49.4896 220.673C47.8955 219.079 47 216.917 47 214.663C47 212.409 47.8955 210.247 49.4896 208.653C51.0836 207.058 53.2457 206.163 55.5 206.163H58.087"
                    stroke="#212225"
                    stroke-width="2"
                  />
                </g>
                <defs>
                  <clippath
                    id="clip0_675_23634"
                  >
                    <rect
                      fill="white"
                      height="271.163"
                      width="342"
                    />
                  </clippath>
                </defs>
              </svg>
            </div>
            <div
              class="mt-8"
              data-testid="ApplicationError__text"
            >
              <h2
                class="text-2xl font-bold capitalize"
              >
                Something went wrong
              </h2>
              <p
                class="text-theme-secondary-text"
              >
                It looks like something went wrong. Try visiting another page or reloading.
              </p>
              <p
                class="text-theme-secondary-text"
              >
                Please provide the error below when contacting support.
              </p>
            </div>
            <div
              class="mx-auto mt-8 max-w-md"
            >
              <div
                class="relative"
              >
                <div
                  class="border-t-theme-secondary-400 dark:border-t-theme-secondary-700 dim:border-t-theme-dim-500 pointer-events-none absolute right-3 bottom-4 z-10 hidden h-0 w-0 -rotate-45 border-x-8 border-t-8 border-x-transparent md:block"
                />
                <div
                  class="text-theme-text flex w-full appearance-none items-center space-x-2 rounded px-4 transition-colors duration-200 border border-theme-secondary-300 bg-theme-secondary-100 dark:border-theme-secondary-700 dark:bg-theme-secondary-800 dim:border-theme-dim-700 dim:bg-theme-dim-950 focus-within:ring-1 relative py-4"
                >
                  <div
                    class="relative flex h-full flex-1"
                  >
                    <textarea
                      autocomplete="off"
                      class="bg-transparent! p-0! focus:shadow-none focus:ring-transparent! focus:outline-hidden [&.shadow-none]:shadow-none no-ligatures placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 dim:placeholder:text-theme-dim-500 w-full border-none text-sm! sm:text-base! text-theme-secondary-text min-h-[8rem] md:min-h-auto md:resize-y resize-none"
                      data-testid="ErrorStep__errorMessage"
                      disabled=""
                      type="text"
                    >
                      some error
                    </textarea>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="mx-auto mt-8 flex max-w-md items-center justify-center space-x-4"
            >
              <div
                class="relative"
              >
                <button
                  class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed dark:bg-theme-dark-800 dark:text-theme-dark-50 bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-800 hover:text-white dark:hover:bg-theme-primary-500 dim:bg-theme-dim-navy-900 dim-hover:bg-theme-dim-navy-700 dim-hover:text-white"
                  data-testid="clipboard-button__wrapper"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Copy
                  </div>
                </button>
              </div>
              <button
                class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed text-white bg-theme-primary-600 dark:hover:bg-theme-primary-500 dim:bg-theme-dim-navy-600"
                data-testid="ApplicationError__button--reload"
                type="button"
              >
                <div
                  class="flex items-center gap-2"
                >
                  Reload
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </main>
</DocumentFragment>
`;

exports[`ApplicationError > should render without error message 1`] = `
<DocumentFragment>
  <main
    class="light"
    data-testid="Main"
  >
    <div
      class="relative flex flex-col sm:min-h-screen pb-14 sm:pb-0"
      style="min-height: -webkit-fill-available;"
    >
      <nav
        aria-labelledby="main menu"
        class="custom-nav-wrapper dark:bg-theme-dark-900 dim:bg-theme-dim-900 sticky inset-x-0 top-0 z-40 bg-white transition-all duration-200 h-21"
      >
        <div
          class="relative flex"
        >
          <div
            class="mt-6 flex flex-1 px-6 md:px-10"
          >
            <div
              class="my-auto flex h-12 items-center"
            >
              <button
                class="bg-theme-primary-600 focus:ring-theme-primary-400 dark:bg-theme-dark-navy-500 my-auto flex cursor-pointer items-center justify-center text-white outline-hidden focus:ring-2 focus:outline-hidden h-11 w-11 rounded-xl"
                data-testid="NavigationBarLogo--button"
                type="button"
              >
                <span
                  class="relative"
                >
                  <svg
                    fill="none"
                    height="32"
                    viewBox="0 0 363 363"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      clip-path="url(#clip0_434_4442)"
                    >
                      <path
                        d="M174.182 352.325a279.256 279.256 0 0 1-25.627-20.536c-8.518-7.525-17.006-15.66-25.229-24.178a470.15 470.15 0 0 1-29.234-33.315 449.417 449.417 0 0 1-57.68-93.623 420.933 420.933 0 0 1-22.044-60.102A416.702 416.702 0 0 1 1.126 51.749c-.512-4.803-.303-10.73 5.9-13.842a393.077 393.077 0 0 1 54.42-19.94 459.697 459.697 0 0 1 52.646-12.195A374.409 374.409 0 0 1 176.15.333h11.6a374.406 374.406 0 0 1 62.057 5.44 459.723 459.723 0 0 1 52.646 12.195 393.328 393.328 0 0 1 54.422 19.939c6.203 3.115 6.41 9.034 5.898 13.842a416.672 416.672 0 0 1-13.242 68.822 421.133 421.133 0 0 1-22.044 60.102 449.395 449.395 0 0 1-57.68 93.623 470 470 0 0 1-29.234 33.315c-8.223 8.518-16.711 16.653-25.229 24.178a279.73 279.73 0 0 1-25.627 20.536 17.811 17.811 0 0 1-15.528 0h-.007zm6.769-230.087c-.412.547-28.363 29.571-48.772 50.764-7.035 7.318-13.229 13.736-17.187 17.853a49.345 49.345 0 0 0-14.37 29.355 42.981 42.981 0 0 0 2.034 17.531 59.295 59.295 0 0 0 10.41 18.547 369.34 369.34 0 0 0 42.811 44.915 223.324 223.324 0 0 0 20.072 16.051 13.364 13.364 0 0 0 12.005 0 223.333 223.333 0 0 0 20.07-16.051 369.191 369.191 0 0 0 42.811-44.915 59.297 59.297 0 0 0 10.411-18.547 42.98 42.98 0 0 0 2.033-17.531 49.34 49.34 0 0 0-14.377-29.358l-14.811-15.385-1.779-1.848c-20.66-21.451-48.955-50.832-49.371-51.383a1.179 1.179 0 0 0-.995-.548 1.184 1.184 0 0 0-.995.548v.002zm1.408-69.483c.136.215.321.505.582.869.391.544 6.257 9.93 14.382 22.92 19.488 31.162 52.102 83.315 60.679 96.014 6.342 9.377 14.353 14.77 21.974 14.772 7.402 0 18.108-5.031 27.079-29.067a332.382 332.382 0 0 0 19.124-81.095c.409-3.84.243-8.568-4.713-11.056a314.32 314.32 0 0 0-43.468-15.926 367.237 367.237 0 0 0-42.052-9.743 299.13 299.13 0 0 0-49.568-4.345h-8.871a299.13 299.13 0 0 0-49.568 4.345 367.225 367.225 0 0 0-42.051 9.743 314.427 314.427 0 0 0-43.469 15.926c-4.951 2.486-5.12 7.213-4.712 11.056a332.313 332.313 0 0 0 19.124 81.095c4.952 13.265 13.67 29.067 27.078 29.067 7.624 0 15.63-5.384 21.974-14.772 8.57-12.687 41.169-64.811 60.643-95.955l.032-.053c8.124-12.993 13.995-22.38 14.384-22.921.259-.364.455-.657.58-.87.209-.327.311-.491.416-.491.105 0 .214.16.421.487zm-55.455 149.533l19.652-20.614h69.159l19.649 20.614h-108.46zm34.197-35.377l20.162-20.871 20.159 20.871h-40.321z"
                        fill="currentColor"
                      />
                    </g>
                  </svg>
                </span>
              </button>
              <span
                class="ml-4 text-lg leading-[21px] uppercase"
              >
                <strong>
                  ARK
                </strong>
                Vault
              </span>
            </div>
          </div>
        </div>
      </nav>
      <div
        class="flex flex-1 flex-col"
      >
        <div
          class="w-full py-4 first:pt-8 last:pb-8 flex flex-1 flex-col justify-center text-center"
        >
          <div
            class="mx-auto px-6 md:px-10 lg:container"
          >
            <div
              class="mx-auto flex w-full max-w-xs justify-center"
            >
              <svg
                fill="none"
                viewBox="0 0 342 272"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  clip-path="url(#clip0_675_23634)"
                >
                  <path
                    d="M152 126.163V115.345C152 115.345 150.408 107.493 143.844 107.29C137.28 107.087 114.814 107.29 114.814 107.29C114.814 107.29 116.256 109.882 116.241 111.253C116.226 112.624 116.241 126.163 116.241 126.163H152Z"
                    fill="#EEF3F5"
                  />
                  <path
                    d="M255.466 223.224H278.16C278.16 223.224 278.388 217.058 276.917 215.212C275.446 213.366 273.146 209.862 271.589 209.747C269.82 209.393 268.092 208.86 266.431 208.157H264.076V166.884C264.076 166.884 260.396 173.984 255.197 176.251C252.006 177.619 248.569 178.322 245.097 178.317C245.097 178.317 245.609 187.794 244.287 191.117C242.446 195.339 240.371 199.455 238.071 203.445C237.228 204.693 237.458 205.289 239.397 205.328C242.543 205.469 245.612 206.347 248.356 207.892C251.29 209.714 255.1 212.855 255.464 216.255C255.828 219.655 256.234 220.288 256.184 220.798C255.993 221.62 255.753 222.43 255.466 223.224V223.224Z"
                    fill="#DBDEE5"
                  />
                  <path
                    d="M264.246 85.2819C264.246 85.2819 263.546 74.723 266.54 70.802C269.534 66.881 278.418 56.6669 279.032 51.2399C279.646 45.8129 280.932 39.2669 279.032 36.5859C277.132 33.9049 273.498 34.4359 272.594 34.5719C271.69 34.7079 275.804 43.4719 268.976 53.2869C262.148 63.1019 250.738 68.287 249.722 68.75C248.706 69.213 246.559 70.4139 249.722 71.3139C252.885 72.2139 258.302 76.0209 260.084 79.0209C261.866 82.0209 264.246 85.2819 264.246 85.2819V85.2819Z"
                    fill="#DBDEE5"
                  />
                  <path
                    d="M64 271.163V251.163H26V261.163H24V251.163H0V249.163H24V211.163H0V209.163H24V191.163H26V209.163H29V211.163H26V249.163H64V231.163H66V249.163H89V251.163H66V271.163H64ZM103 255.163V251.163H99V249.163H103V245.163H105V249.163H109V251.163H105V255.163H103ZM314 242.163V223.163H227V242.163H225V223.163H220V221.163H225V182.163H227V221.163H314V182.163H310V180.163H314V142.163H310V140.163H314V117.163H316V140.163H322V142.163H316V180.163H342V182.163H316V221.163H342V223.163H316V242.163H314ZM295 186.163V182.163H291V180.163H295V176.163H297V180.163H301V182.163H297V186.163H295ZM24 185.163V181.163H20V179.163H24V175.163H26V179.163H30V181.163H26V185.163H24ZM314 107.163V103.163H310V101.163H314V97.163H316V101.163H320V103.163H316V107.163H314Z"
                    fill="#DBDEE5"
                  />
                  <path
                    d="M201.294 223.255H91.8418"
                    stroke="#DBDEE5"
                    stroke-linecap="round"
                    stroke-width="2"
                  />
                  <path
                    d="M279.32 38.542C278.483 41.142 275.089 37.413 275.149 34.995C275.209 32.577 280.157 35.936 279.32 38.542Z"
                    fill="#235B95"
                  />
                  <path
                    d="M162 125.163C176.291 105.62 203 88.563 203 56.163C203 23.763 215.474 18.424 222 15.163C223.433 14.447 227.45 5.12 228 3.163C228.55 1.206 231.566 -0.499002 234 3.163C236.178 6.44 239 11.163 239 11.163C239 11.163 263.327 11.194 272 34.163C272.4 35.212 276.644 34.022 278 35.163C279.356 36.304 284.216 50.422 271 65.163C267.826 68.704 264 71.463 264 87.163V208.163C264 208.163 278 207.894 278 221.163V222.163H262"
                    stroke="#212225"
                    stroke-linecap="round"
                    stroke-width="2"
                  />
                  <path
                    d="M226.242 146.595C232.1 150.712 236.868 156.192 240.136 162.563C243.404 168.934 245.073 176.004 244.999 183.163C244.999 192.157 241.658 197.926 237.112 204.956"
                    stroke="#212225"
                    stroke-linecap="round"
                    stroke-width="2"
                  />
                  <path
                    d="M237 205.163C243.706 205.163 254.2 207.455 256 219.163C256.091 220.161 256.091 221.165 256 222.163L228.025 222.255"
                    stroke="#212225"
                    stroke-linecap="round"
                    stroke-width="2"
                  />
                  <path
                    d="M272.114 34.397C272.114 34.397 280.44 58.944 241 72.163"
                    stroke="#212225"
                    stroke-linecap="round"
                    stroke-width="2"
                  />
                  <path
                    d="M220.9 15.876C220.9 15.876 226.456 14.463 229 12.163"
                    stroke="#212225"
                    stroke-linecap="round"
                    stroke-width="2"
                  />
                  <path
                    d="M264 85.163C264 85.163 258.986 73.163 247 70.163"
                    stroke="#212225"
                    stroke-linecap="round"
                    stroke-width="2"
                  />
                  <path
                    d="M208.636 125.985C205.931 122.056 203.949 114.174 205.999 108.163"
                    stroke="#212225"
                    stroke-linecap="round"
                    stroke-width="2"
                  />
                  <path
                    d="M260.89 31.563C260.89 31.563 258.29 29.363 252.832 31.563"
                    stroke="#212225"
                    stroke-linecap="round"
                    stroke-width="2"
                  />
                  <path
                    d="M245 178.591C245 178.591 260.492 178.128 264 165.501"
                    stroke="#212225"
                    stroke-linecap="round"
                    stroke-width="2"
                  />
                  <path
                    d="M116 126.163H216C218.652 126.163 221.196 127.217 223.071 129.092C224.946 130.967 226 133.511 226 136.163V213.163"
                    stroke="#DBDEE5"
                    stroke-width="2"
                  />
                  <path
                    d="M59 127.163V111.163C59 108.511 60.0536 105.967 61.929 104.092C63.8043 102.217 66.3478 101.163 69 101.163H106C108.652 101.163 111.196 102.217 113.071 104.092C114.946 105.967 116 108.511 116 111.163V127.163"
                    stroke="#DBDEE5"
                    stroke-width="2"
                  />
                  <path
                    d="M115 107.163H142C144.652 107.163 147.196 108.217 149.071 110.092C150.946 111.967 152 114.511 152 117.163V127.163"
                    stroke="#DBDEE5"
                    stroke-width="2"
                  />
                  <path
                    d="M116 126.163H216C218.652 126.163 221.196 127.217 223.071 129.092C224.946 130.967 226 133.511 226 136.163V162.163M59 213.163V127.163"
                    stroke="#DBDEE5"
                    stroke-linecap="round"
                    stroke-width="2"
                  />
                  <path
                    d="M178 171.163H174V167.163H178V171.163ZM170 171.163H166V167.163H170V171.163ZM122 171.163H118V167.163H122V171.163ZM114 171.163H110V167.163H114V171.163ZM174 167.163H170V163.163H174V167.163ZM118 167.163H114V163.163H118V167.163ZM178 163.163H174V159.163H178V163.163ZM170 163.163H166V159.163H170V163.163ZM122 163.163H118V159.163H122V163.163ZM114 163.163H110V159.163H114V163.163Z"
                    fill="#212225"
                  />
                  <path
                    d="M133 190.163H157"
                    stroke="#212225"
                    stroke-width="2"
                  />
                  <path
                    d="M75.617 206.163H108.5C110.754 206.163 112.916 207.058 114.51 208.653C116.104 210.247 117 212.409 117 214.663C117 216.917 116.104 219.079 114.51 220.673C112.916 222.267 110.754 223.163 108.5 223.163H55.5C53.2457 223.163 51.0836 222.267 49.4896 220.673C47.8955 219.079 47 216.917 47 214.663C47 212.409 47.8955 210.247 49.4896 208.653C51.0836 207.058 53.2457 206.163 55.5 206.163H58.087"
                    stroke="#212225"
                    stroke-width="2"
                  />
                </g>
                <defs>
                  <clippath
                    id="clip0_675_23634"
                  >
                    <rect
                      fill="white"
                      height="271.163"
                      width="342"
                    />
                  </clippath>
                </defs>
              </svg>
            </div>
            <div
              class="mt-8"
              data-testid="ApplicationError__text"
            >
              <h2
                class="text-2xl font-bold capitalize"
              >
                Something went wrong
              </h2>
              <p
                class="text-theme-secondary-text"
              >
                It looks like something went wrong. Try visiting another page or reloading.
              </p>
            </div>
            <div
              class="mx-auto mt-8 flex max-w-md items-center justify-center space-x-4"
            >
              <button
                class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed text-white bg-theme-primary-600 dark:hover:bg-theme-primary-500 dim:bg-theme-dim-navy-600"
                data-testid="ApplicationError__button--reload"
                type="button"
              >
                <div
                  class="flex items-center gap-2"
                >
                  Reload
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </main>
</DocumentFragment>
`;
